annonymized repository, refactored frontend and backend

--- a/data-collector/backend/src/main/resources/application.properties
+++ b/data-collector/backend/src/main/resources/application.properties
@@ -3,12 +3,10 @@ quarkus.http.test-port=8888
 quarkus.http.port=1337
 
 #datasource
-quarkus.datasource.db-kind=postgresql 
-quarkus.datasource.username=xxxxxx
-quarkus.datasource.password=xxxxxx
-
-
-quarkus.datasource.jdbc.url=xxxxxx
+quarkus.datasource.db-kind=postgresql
+quarkus.datasource.username=qeqmzklg
+quarkus.datasource.password=plyOSPaMKOaHj-jo237Ec52_Lbhh8i6J
+quarkus.datasource.jdbc.url=jdbc:postgresql://flora.db.elephantsql.com/
 quarkus.datasource.jdbc.max-size=16
 
 # drop and create the database at startup (use `update` to only update the schema)
@@ -22,8 +20,8 @@ quarkus.rest-client.logging.body-limit=1024
 quarkus.log.category."org.jboss.resteasy.reactive.client.logging".level=DEBUG
 quarkus.log.category."io.quarkus.http.access-log".level=DEBUG
 
-quarkus.openapi-generator.codegen.spec.petstore_json.base-package=org.jrc.rodec
+quarkus.openapi-generator.codegen.spec.petstore_json.base-package=org.name
 quarkus.openapi-generator.codegen.validateSpec=false
 
-quarkus.rest-client."org.jrc.rodec.microservices.GenesisApiClient".url=https://www-genesis.destatis.de/genesisWS/rest/2020
-quarkus.rest-client."org.jrc.rodec.microservices.GenesisApiClient".scope=javax.inject.Singleton
+quarkus.rest-client."org.jrc.name.microservices.GenesisApiClient".url=https://www-genesis.destatis.de/genesisWS/rest/2020
+quarkus.rest-client."org.jrc.name.microservices.GenesisApiClient".scope=javax.inject.Singleton
